syntax = "proto2";

package domain_data;

message Metadata {
    required string name = 1;
    required string data_type = 2;
    required uint32 size = 3;
    required string id = 4;
    string hash = 5; // This is optional to be compatible with the existing domain data
    map<string, string> properties = 6;
}

message Query {
    repeated string ids = 1;
    optional string name_regexp = 2;
    optional string data_type_regexp = 3;
    repeated string names = 4;
    repeated string data_types = 5;
}

message Data {
    required string domain_id = 1;
    required Metadata metadata = 2;
    required bytes content = 3;
}

message UpsertMetadata {
    required string name = 1;
    required string data_type = 2;
    required uint32 size = 3;
    required bool is_new = 4; // This is needed as we can't use hash as identifier now
    required string id = 5;
    map<string, string> properties = 6;
}
